feat(server): 移除旧版RealFlow API服务代码及配置文件

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "realflow-api",
   "version": "1.0.0",
   "description": "SQL Server 2016 RealFlow数据查询API服务",
-  "main": "server.js",
+  "main": "src/server.js",
   "author": "RealFlow API Team",
   "license": "ISC",
   "homepage": "",
@@ -23,16 +23,16 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "start": "node server-node16.js",
+    "start": "node src/server.js",
     "test": "node server-test.js",
-    "dev": "nodemon server-node16.js",
-    "test-dev": "nodemon server-test.js",
+    "dev": "nodemon src/server.js",
+    "test-dev": "nodemon src/server.js",
     "lint": "eslint *.js",
     "info": "node info.js"
   },
   "dependencies": {
     "express": "^4.17.3",
-    "mssql": "^7.3.5",
+    "mssql": "^6.4.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0"
   },
